# weebtk

./: .envrc  Cargo.toml  README.md
.github/workflows/: rust.yml
qml/: main.qml
qml/vndb/: login.qml  vndb.qml
src/: main.rs
src/trackers/: mod.rs
src/trackers/vndb/: data.rs  model.rs
src/vndb/: model.rs
