[package]
name = "weebtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = "0.2"
cstr = "0.2"
kirigami = "0.1"
ki18n = { version = "1.1", features = ["qmetaobject"] }
log = "0.4"
env_logger = "0.9"
